--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,16 +45,30 @@
                 android:textColor="@color/White"
                 android:textSize="20sp"
                 android:text="@string/enough_test"/>
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview_tests"
+            <GridView
+                android:id="@+id/gridView_tests"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="20dp">
 
-            </android.support.v7.widget.RecyclerView>
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:columnCount="4"
+                android:columnOrderPreserved="false"
+                android:listSelector="#0f0"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:paddingBottom="0dp"
+                android:rowCount="3"
+                tools:targetApi="ice_cream_sandwich"
+                tools:ignore="UselessParent"
+                android:columnWidth="90dp"
+                android:numColumns="2"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:stretchMode="columnWidth"
+                android:gravity="center">
+
+            </GridView>
 
 
         </RelativeLayout>
