--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:gravity="center_vertical"
     android:layout_height="match_parent"
-    tools:context=".activities.ResultActivity">
 
-</android.support.constraint.ConstraintLayout>
+    android:orientation="vertical"
+    android:background="@color/Blue_Dress">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/White"
+        android:fontFamily="@font/lato"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:text="@string/radar_title"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
+    <com.github.mikephil.charting.charts.RadarChart
+        android:id="@+id/chart23"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:background="@color/White"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintVertical_bias="0.6" />
+
+
+
+</LinearLayout>
