--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6C98FF</color>
-    <color name="colorPrimaryDark">#6C98FF</color>
+    <color name="colorPrimary">@color/Blue_Dress</color>
+    <color name="colorPrimaryDark">@color/Blue_Dress</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="appreparto2">#373737</color>
